--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Eryndors Kro</title>
-  <link rel="stylesheet" href="./styles.css">
-  <link rel="stylesheet" href="./arketype-theme.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./arketype-theme.css" />
 </head>
 <body>
-  <!-- Din app-root, som styles med arketype-tema via JS -->
-  <div id="app"></div>
+  <div id="app"><!-- App markup injiceres af app.js --></div>
   <script type="module" src="./app.js"></script>
 </body>
 </html>
